--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -1,5 +1,5 @@
 NAME	= Zombie
-SRC		= main.cpp newZombie.cpp randomChump.cpp Zombie.cpp
+SRC		= main.cpp zombieHorde.cpp Zombie.cpp
 OBJ_DIR	= obj
 OBJ		= $(SRC:.cpp=.o)
 INC		= incs -I
