--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -2,7 +2,7 @@ NAME	= brain
 SRC		= main.cpp
 OBJ_DIR	= obj
 OBJ		= $(SRC:.cpp=.o)
-INC		= incs -I
+INC		=
 CC		= c++
 RM		= rm -fr
 FLAGS	= -Wall -Wextra -Werror -std=c++11
