--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -2,7 +2,7 @@ NAME	= fight
 SRC		= main.cpp Weapon.cpp HumanA.cpp HumanB.cpp
 OBJ_DIR	= obj
 OBJ		= $(SRC:.cpp=.o)
-INC		= incs -I
+INC		= -I
 CC		= c++
 RM		= rm -fr
 FLAGS	= -Wall -Wextra -Werror -std=c++11
