--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -1,5 +1,5 @@
 NAME	= cpp03
-SRC		= main.cpp ClapTrap.cpp Scavtrap.cpp FragTrap.cpp
+SRC		= main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp
 OBJ		= $(SRC:.cpp=.o)
 FLAGS	= -Wall -Wextra -Werror -std=c++11
 
