--- a/cpp07/ex00/Makefile
+++ b/cpp07/ex00/Makefile
@@ -1,7 +1,7 @@
-NAME = serializer
+NAME = whatever
 CC = g++
-CFLAGS = -Wall -Wextra -Werror -std=c++20
-SRCS = main.cpp Serializer.cpp
+CFLAGS = -Wall -Wextra -Werror -std=c++23
+SRCS = main.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
